@@ -52,8 +52,18 @@ progression.edit.tooltip.crafting.timesCrafted.1=has actually crafted. E.g. Craf
 progression.edit.tooltip.crafting.timesCrafted.2=will increase this counter by 1 point
 progression.edit.tooltip.crafting.amount.0=This checks how many items the player
 progression.edit.tooltip.crafting.amount.1=has actually crafted. E.g. Crafting stairs
-progression.edit.tooltip.crafting.amount.2=will increase this counter by 4 point
+progression.edit.tooltip.crafting.amount.2=will increase this counter by 4 points
 progression.trigger.kill=Kill
+progression.edit.tooltip.kill.greaterThan.0=If you need to have killed more
+progression.edit.tooltip.kill.greaterThan.1=entities than the amount listed
+progression.edit.tooltip.kill.isEqualTo.0=If you need to have killed exactly
+progression.edit.tooltip.kill.isEqualTo.1=the amount of entities listed
+progression.edit.tooltip.kill.lesserThan.0=If you need to have killed less
+progression.edit.tooltip.kill.lesserThan.1=entities than the amount listed
+progression.edit.tooltip.kill.amount.0=Amount of entities needed to be killed
+progression.edit.tooltip.kill.amount.1=Validated by the above values
+progression.edit.tooltip.kill.entities.0=Click to open the entity filtering
+progression.edit.tooltip.kill.entities.1=editor to pick the entities that qualify
 progression.trigger.login=Login
 progression.trigger.points=Points
 progression.trigger.onEaten=On Eaten
@@ -107,6 +117,12 @@ progression.action.harvestdrop=Harvest Drop
 progression.action.entitydrop=Entity Drop
 
 #Filters
+progression.filter.block=Block Selector
+progression.filter.item=Item Selector
+progression.filter.entity=Entity Selector
+progression.filter.location=Location Selector
+progression.filter.potioneffect=Potion Selector
+progression.filter.action=Action Selector
 progression.filters=Filters
 progression.new.filter=Add New Filter
 progression.new.item=Add New Filter
