@@ -27,7 +27,8 @@ Progression 0.5.0
   Removed the Option to select the item you want to use to open editor (now just the progression book)
     Allows for Unlocking of Tabs with Criteria
     The normal invisibility is if you want a tab to be permanently invisible (for logic)
- The Criteria Reward can now make Criteria Impossible to complete, an example of use would be to remove crafting criteria and never be able to complete it again
+  The Criteria Reward can now make Criteria Impossible to complete, an example of use would be to remove crafting criteria and never be able to complete it again
+  Repeating quests now resets any trigger data. So if you want someone to kill 5 pigs, when it's completed, this counter will be reset, and in order to complete the quest they will need to kill another 5 pigs, instead of just another 1
 
 Progression 0.4.1
   Add On Second Trigger
